# sturdy-octo-fortnight

./: .env.example  .gitignore  README.md  app.py  hitl_app.py  hitl_app_recording.mov  index.html  pyproject.toml  requirements.txt  simple_app.py
.chainlit/: config.toml
audio/: audio_handler.py
auth/: auth_handler.py
config/: profiles.py  settings.py
connection/: mcp_handler.py
event/: callback.py
notebooks/: test_hitl.ipynb
public/elements/: map.jsx
src/: chat_tool_steps.py  map_tool_steps.py  mcp_tool_steps.py  tool_steps.py
tools/: currency_tool.py  map_tool.py
utils/: openai_format.py
