[project]
name = "sturdy-octo-fortnight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.3",
    "llama-index>=0.13.3",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-workflows>=1.3.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
